--- a/src/Routes/Recipe.css
+++ b/src/Routes/Recipe.css
@@ -1,37 +1,27 @@
 .container-recipe {
-  height: 1000px;
-  height: 700px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 10px;
-  border-radius: 20px;
-  padding: 1rem;
-  box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.3);
-  position: relative;
+  width: 90%;
+
+  margin: 5rem auto;
 }
 
 .prepare-recipe {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  width: 600px;
+  width: 100%;
+  height: 100%;
   margin-top: 1rem;
+  padding: 1rem;
 }
 
 .info-recipe {
-  position: absolute;
-  top: 60px;
-  right: 35px;
   display: flex;
   justify-content: space-evenly;
+  position: relative;
   align-items: center;
-  transform: translateX(-50%);
   width: 300px;
   height: 50px;
   border-radius: 20px;
   background-color: #f8f8f8;
   color: #f36405;
+  margin-top: 1rem;
 }
 
 .info-recipe p {
@@ -40,6 +30,49 @@
   align-items: center;
   cursor: pointer;
   gap: 5px;
+}
+
+.desc-recipe {
+  color: #f36405;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  min-height: 700px;
+  height: 100%;
+  position: relative;
+  
+}
+
+.desc-recipe img {
+  max-width: 500px;
+  width: 80%;
+  border-radius: 20px;
+  margin-top: 1rem;
+}
+
+.rating-recipe {
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  gap: 10px;
+  height: 30px;
+}
+.rating-recipe p {
+  font-size: 1.2rem;
+  margin-top: -px;
+}
+#count {
+  margin-top: 10px;
+
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+#count:hover {
+  transform: scale(1.05);
 }
 
 .calories:after {
@@ -85,40 +118,6 @@
   display: flex;
 }
 
-.desc-recipe {
-  color: #f36405;
-  text-align: center;
-}
-
-.desc-recipe img {
-  width: 40dvw;
-  max-width: 500px;
-  border-radius: 20px;
-  margin-top: 1rem;
-}
-
-.rating-recipe {
-  font-size: 1.5rem;
-  display: flex;
-  justify-content: center;
-  align-items: baseline;
-  gap: 10px;
-  height: 30px;
-}
-.rating-recipe p {
-  font-size: 1.2rem;
-  margin-top: -px;
-}
-#count {
-  margin-top: 10px;
-  text-decoration: underline;
-  cursor: pointer;
-  margin-bottom: 2rem;
-}
-#count:hover {
-  transform: scale(1.05);
-}
-
 .comment {
   background-color: #f8f8f8;
   margin: 10px;
@@ -126,16 +125,23 @@
 
 .ingredients,
 .instructions {
-  margin: 1rem;
+  margin: 2rem;
+  margin-top: 7rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
   background-color: #f8f8f8;
   padding: 1rem;
   border-radius: 20px;
   font-weight: bold;
-  width: 300px;
+  max-width: 700px;
+  margin: 1rem auto;
+  height: 100%;
+}
+
+.ingredients h2,
+.instructions h2{
+  text-align: center;
 }
 
 .ingredients:hover,
@@ -161,12 +167,11 @@
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
-  margin-top: 3rem;
 }
 
 .comment {
   max-width: 500px;
-  width: 60%;
+  width: 90%;
   padding: 1rem;
   border-radius: 20px;
   display: flex;
@@ -178,4 +183,45 @@
 .comment p:first-child {
   font-size: 18px;
   color: #f36405;
+}
+
+.btns-manage {
+  display: flex;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.edit,
+.delete {
+  width: 60px;
+  height: 20px;
+  cursor: pointer;
+  border: none;
+  border-radius: 20px;
+  color: #fff;
+}
+.edit:hover,
+.delete:hover {
+  transform: scale(1.05);
+  background-color: #fff;
+}
+.edit:active,
+.delete:active {
+  transform: scale(1);
+}
+
+.edit {
+  background-color: rgb(98, 211, 98);
+}
+.edit:hover {
+  color: rgb(98, 211, 98);
+  border: 1px solid rgb(98, 211, 98);
+}
+
+.delete {
+  background-color: red;
+}
+.delete:hover {
+  color: red;
+  border: 1px solid red;
 }
