--- a/src/Routes/Recipes.css
+++ b/src/Routes/Recipes.css
@@ -1,5 +1,15 @@
 .container-recipes {
   height: 100%;
+  margin-top: 70px;
+  width: 100%;
+}
+
+.container-recipes h1{
+  margin-bottom: 2rem;
+  padding: 2rem;
+  border-bottom: 5px solid #f8f8f8;
+  
+  text-transform: capitalize;
 }
 
 .recipes {
@@ -7,34 +17,11 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  gap: 20px;
   width: 100%;
 }
 
-.recipe {
-  width: 350px;
-  height: 200px;
-  display: flex;
-  gap: 10px;
-  margin: 1rem;
-  padding: 1rem;
-  background-color: #d9d9d92f;
-  border-radius: 14px;
-  cursor: pointer;
- 
-}
 
-.recipe:hover {
-  transform: scale(1.05);
-  box-shadow: 4px 8px 16px rgba(0, 0, 0, 0.3);
-  transition: all 0.3s ease;
-}
-.recipe:active {
-  transform: scale(1);
-}
-.recipe img {
-  width: 50%;
-  border-radius: 20px;
-}
 
 .info-recipes {
   width: 50%;
@@ -69,7 +56,7 @@
 
 #btn-recipe{
   width: 80px;
-  height: 20px;
+  height: 30px;
   border-radius: 14px;
   border: none;
   background-color: #f36405;
