--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,11 +2,10 @@
 #footer{
     border-top: 2px solid #ddd;
     padding: 3rem;
-    justify-content:space-around;
-    display: flex;
-   
-
-    background-color: #d3d3d3;
+   display: flex;
+   justify-content: center;
+    
+    background-color: #0000009d;
 }
 
 #form-footer input[type="submit"] {
@@ -15,6 +14,8 @@
     color: #fff;
     cursor: pointer;
     transition: 0.4s;
+    border: none;
+    border-radius: 0.5rem;
 }
   
 #form-footer input[type="submit"]:hover{
@@ -28,7 +29,9 @@
 
 
 #form-footer{
-    max-width: 30%;
+    display: flex;
+    flex-direction: column;
+    max-width: 100%;
 }
 
 #form-footer h2, label, input{
@@ -40,22 +43,4 @@
     display: flex;
     justify-content: end;
     align-items: end;
-}
-
-@media (max-width:450px){
-    .container{
-        flex-wrap: wrap;
-    }
-
-    header p{
-        display: none;
-    }
-
-    #form-footer{
-        max-width: 500px;
-    }
-
-    .logo-footer{
-        display: none;
-    }
 }
