--- a/src/components/Home/Main.css
+++ b/src/components/Home/Main.css
@@ -1,59 +1,265 @@
-#post-container {
-  flex: 3 1 0;
-  text-align: center;
+main {
+  height: 100%;
+}
+
+.banner {
+  padding-top: 4rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+  border-bottom: 2px solid #f8f8f8;
+  min-height: 600px;
+  height: 100%;
+  width: 100%;
+  background-image: url("https://images.unsplash.com/photo-1695683948872-cae4271e3b25?q=80&w=1742&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+
+}
+
+.search-banner {
+  max-width: 600px;
+  width: 90%;
+  height: 300px;
+  backdrop-filter: blur(16px) saturate(180%);
+  -webkit-backdrop-filter: blur(16px) saturate(180%);
+  background-color: rgba(255, 255, 255, 0.15);
+  border-radius: 12px;
+  border: 1px solid rgba(209, 213, 219, 0.9);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  padding: 1rem;
+  border-radius: 20px;
+
+}
+
+
+.search-banner h1{
+  margin-top: 2rem;
+  color: #fff;
+}
+.search-banner p{
+  color: #d8d8d8;
+}
+
+.search-banner button {
+  padding: 0.7rem 1rem;
+  border: none;
+  border-radius: 0.6rem;
+  background-color: #f36405f1;
+  color: #fff;
+  cursor: pointer;
+  position: relative;
+}
+
+.search-banner button:hover {
+  transform: scale(1.05);
+}
+
+.search-banner button:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #ffffff3f;
+  width: 100%;
+  height: 100%;
+  display: none;
+  border-radius: 0.6rem;
+}
+.search-banner button:hover:after {
+  display: block;
+  animation: animate 1s linear;
+}
+
+@keyframes animate {
+  from {
+    width: 0%;
+  }
+}
+
+.img-banner {
+
+  height: 420px;
+  width: 420px;
+}
+.img-banner img {
+  height: 80%;
+  width: 80%;
+  opacity: 0.8;
+}
+
+/* Css Last Recipes */
+.container-last-recipes {
+  width: 100%;
+  height: 100%;
+  min-height: 500px;
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #f8f8f8;
+}
+.container-last-recipes h1 {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 4rem auto;
+}
+.last-recipes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 30px;
+  
+}
+
+
+.infos {
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.infos ul li {
+  margin-bottom: 5px;
+}
+
+
+
+/* End Css LastRecipes */
+
+/* Start Css Products */
+
+.container-products {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+  min-height: 600px;
+  height: 100%;
+  gap: 2rem;
+  border-bottom: 1px solid #f8f8f8;
+}
+
+.banner-products {
+  width: 520px;
+  height: 428px;
+  background-color: rgb(105, 105, 105);
+}
+.banner-products img {
+  width: 100%;
+  height: 100%;
+}
+.products {
+  width: 520px;
+  min-height: 428px;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: start;
+  margin-bottom: 2rem;
+}
+
+.control-product {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+  gap: 10px;
+}
+
+.product {
+  width: 240px;
+  height: 320px;
+  background-color: #f8f8f8;
+}
+
+.product img {
+  background-color: #000;
+  width: 100%;
+  height: 240px;
+}
+
+.product p {
+  margin: 10px;
+}
+
+/* End Css Products */
+/* Start Customer Review */
+
+.container-customer-reviews {
+  display: flex;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
+  height: 100%;
+  min-height: 600px;
 
- 
+  margin-top: 1rem;
+  border-bottom: 1px solid #f8f8f8;
 }
 
-.post {
-  height: 800px;
-  margin-bottom: 2.5rem;
-  padding: 1rem;
+.customer-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  max-width: 1100px;
 }
-.post img {
-  width: 600px;
-  height: 600px;
+
+.customer-title {
+  width: 90%;
+}
+
+.customer-image {
+  width: 280px;
+  height: 180px;
+  background-color: #f8f8f8;
+}
+.customer-image img {
+  width: 100%;
+  height: 100%;
+}
+
+.customer-reviews {
+  margin-top: 3rem;
+  width: 80%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 30px;
   margin-bottom: 1rem;
 }
 
-.title,
-.description,
-.author {
-  margin-bottom: 2rem;
-}
-.description {
-  margin: auto 3rem;
-}
-.btnRecipe {
-  width: 100px;
-  height: 20px;
+.review {
+  background-color: #f8f8f8;
+  width: 340px;
+  height: 150px;
+  padding: 10px;
   border-radius: 20px;
-  border: none;
-  background-color: #ff5614;
-  color: #fff;
-  cursor: pointer;
-  margin: 1rem;
 }
 
-.author {
-  margin-top: 2rem;
-  color: #333;
-  font-weight: bold;
-}
-
-.posts-skeleton{
-  margin: 1rem;
+.review-header {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 1rem;
-  align-items: center;
+  align-items: baseline;
+  justify-content: space-between;
+  margin-bottom: 1rem;
 }
 
-.post-skeleton{
-  margin: 0 6rem;
+/* End Customer Review */
+
+@media (max-width:1070px) {
+ .img-banner  {
+  display: none;
+ } 
+  
 }
